Switched to OpenJDK Nashorn and Clean Up